47
================

21/07/23 Allow import of incident data via CSV #1232
21/07/23 Use days for long term instead of months and make it configurable
20/07/23 Long term alert should use long term months config switch
19/07/23 Refactor animal/person warning code, consistent for transfer/reclaim
19/07/23 Show animal and person warnings when creating movements/reservations
19/07/23 Add $CURRENT_DATE_TIME$ token
17/07/23 Extend datepicker to -70 years
17/07/23 Validate additional fields for punctuation and unique/reserved names #1310
17/07/23 Refactor message board add dialog to match newer screens
17/07/23 Defensively handle bad image id inputs when loading images
14/07/23 Separate help menu for clarity
14/07/23 Install recommended reports during database creation instead of /main
14/07/23 Fix bug where 0.0 weight logs appear after a cloned animal is edited
13/07/23 Fixed bug that could cause DOB to be reset to today during CSV import
12/07/23 Add <<ActiveAnimalMedicals>> wordkey
12/07/23 Ability to generate random licence numbers, fix bug in licence display
12/07/23 New location filter: My coordinated animals
11/07/23 Users can now choose their preferred shelter view mode #1114
11/07/23 additional fields in autocomplete when entering online form names #1309
06/07/23 Allow CSV animal deceased fields to be updated on existing records
05/07/23 Refactor login and valid user check, remove redundant code
05/07/23 CSV import fields: ANIMALDECEASEDREASON/NOTES, ANIMALEUTHANIZED
05/07/23 Add Adoption Coordinator to find animal result columns
05/07/23 Set stripe API version it was written for in codebase
04/07/23 If onlineform has breed1, but no species, use species from breed
04/07/23 Add different types of death as available location filters
03/07/23 Check user can still login as well as exists #1307
03/07/23 Check user still exists as well as logged in at endpoints #1307
01/07/23 Add all movement types as available location filters